# CV_Project

./: .gitignore  README.md  pyproject.toml  smart_lock.py
services/api/: .env.template  run.py
services/api/app/: main.py
services/api/app/controllers/: booking_controller.py  checkin_controller.py  checkout_controller.py  room_controller.py
services/api/app/core/: booking_index.py  config.py  events.py
services/api/app/db/: database.py
services/api/app/models/: booking.py
services/api/app/routers/: admin_router.py  booking_router.py  checkin_router.py  checkout_router.py
services/api/app/utils/: email.py  security.py
services/bridge/: zmq_ws_bridge.py
services/camera/: serve_camera.py
services/face_recognition/: cv.py  facereco1.py  facereco2.py
services/stream_receiver/: camera_recv.py
services/ui/: index.html  webrtcclient.js
