[project]
name = "cv-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.5",
    "aiohttp-cors>=0.8.1",
    "aiortc>=1.14.0",
    "av>=16.1.0",
    "dlib>=20.0.1",
    "email-validator>=2.3.0",
    "fastapi[standard]>=0.136.1",
    "motor>=3.7.1",
    "numpy>=2.4.4",
    "opencv-python-headless>=4.13.0.92",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "pymongo>=4.17.0",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.27",
    "pyzmq>=27.1.0",
    "qrcode[pil]>=8.2",
    "requests>=2.33.1",
    "retina-face>=0.0.17",
    "tf-keras>=2.21.0",
    "uvicorn[standard]>=0.46.0",
]
